fix(java17): replace List.getFirst()/getLast() with JDK17-compatible get() calls
Follow-up JDK17 adaptation for commits 70fd12e04 (#5214) and 087ef4fdd (#4943)
cherry-picked earlier in this window: List.getFirst()/getLast() are JDK21 API
and unavailable on Java 17.